- ドキュメント類を整備。

--- a/Docs/コンフィグファイル仕様.md
+++ b/Docs/コンフィグファイル仕様.md
@@ -11,15 +11,15 @@
   - `AccessTokenSecret` {string}: アクセス トークン シークレット (Access token secret)。
 - `FuhaReports`: フハ レポートの出力設定。
   - `EncodingName` {string}: レポート ファイルの文字エンコーディング名。
-  - `DetailReportFilePath` {string}: 詳細フハ レポートのファイル パス。[マクロ](#マクロについて)を指定できる。
-  - `TweetReportFilePath` {string}: ツイート用フハ レポートのファイル パス。マクロを指定できる。
+  - `DetailReportFilePath` {string}: 詳細フハ レポートのファイル パス。[文字列置換マクロ](#文字列置換マクロについて)を指定できる。
+  - `TweetReportFilePath` {string}: ツイート用フハ レポートのファイル パス。文字列置換マクロを指定できる。
 - `RankingCollection`: ランキング集計の設定。
   - `CountPerQuery` {int}: 一度のタイムライン問い合わせで取得する最大ツイート数。ただし、数字が大きすぎるとその数までツイートが取得できるわけではない。
-  - `MaxQueryIterationCount` {int}: タイムライン問い合わせを繰り返す回数。Twitter APIの仕様上、タイムライン問い合わせは15分あたり15回までという制約がある。
-  - `SearchWord` {string}: ランキング対象のツイートを抽出する検索ワード。部分一致で全角半角、大文字小文字などは区別する。
-  - `RankingBaseId` {string}: 順位の基準となるラスボスアカウントの@ID。これより前にツイートするとフライングとなる。
+  - `MaxQueryIterationCount` {int}: タイムライン問い合わせを繰り返す回数。Twitter API の仕様上、タイムライン問い合わせは15分あたり15回までという制約がある。
+  - `SearchWord` {string}: ランキング対象のツイートを抽出する検索ワード。部分一致で検索を行い、全角半角や大文字小文字などは区別する。
+  - `RankingBaseId` {string}: 順位の基準となるラスボスアカウントの @ID。これより前にツイートするとフライングとなる。
 
-## マクロについて
+## 文字列置換マクロについて
 
 `$(マクロ名)` または `$(マクロ名:オプション)` の形式で特定の情報に置換することができる。
 
