- コンフィグファイルの構成を変更。

--- a/Docs/コンフィグファイル仕様.md
+++ b/Docs/コンフィグファイル仕様.md
@@ -16,7 +16,7 @@
 - `RankingCollection`: ランキング集計の設定。
   - `CountPerQuery` {int}: 一度のタイムライン問い合わせで取得する最大ツイート数。ただし、数字が大きすぎるとその数までツイートが取得できるわけではない。
   - `MaxQueryIterationCount` {int}: タイムライン問い合わせを繰り返す回数。Twitter API の仕様上、タイムライン問い合わせは15分あたり15回までという制約がある。
-  - `SearchWord` {string}: ランキング対象のツイートを抽出する検索ワード。部分一致で検索を行い、全角半角や大文字小文字などは区別する。
+  - `SearchWord` {string}: ランキング対象のツイートを抽出する検索ワード。部分一致で検索を行い、全角半角や大文字小文字などは区別する。正規表現での記述に対応。
   - `RankingBaseId` {string}: 順位の基準となるラスボスアカウントの @ID。これより前にツイートするとフライングとなる。
 
 ## 文字列置換マクロについて
