--- a/Docs/コンフィグファイル仕様.md
+++ b/Docs/コンフィグファイル仕様.md
@@ -27,7 +27,7 @@
 
 ### `$(DateTime)` マクロ
 
-現在の日時に置換する。ファイル名に使用できない文字(":" など)が含まれる場合はその文字をアンダースコア ("_") に置換する。
+現在の日時に置換する。ファイル名に使用できない文字(":" など)が含まれる場合はその文字を削除する。
 
 `$(DateTime:カスタム日時書式指定文字列)` とすることで日時の書式を指定できる。詳細は[カスタム日時書式指定文字列(外部リンク)](https://docs.microsoft.com/ja-jp/dotnet/standard/base-types/custom-date-and-time-format-strings)を参照。
 
@@ -39,7 +39,7 @@
 }
 ```
 
-→"ツイート用フハレポート_2019_9_7 9_51_16.txt"
+→"ツイート用フハレポート_201997 95116.txt"
 
 #### 例2
 
