仕様変更に合わせて修正。

--- a/Docs/コンフィグファイル仕様.md
+++ b/Docs/コンフィグファイル仕様.md
@@ -1,35 +1,43 @@
-# コンフィグ ファイル仕様
+# 設定ファイル仕様
 
-実行ファイル (EarliestFuhaRanking.exe) と同じフォルダ階層に "Config.json" という名前で配置することで機能する。
+実行ファイル (`TodaysFuhaRanking.exe`) と同じフォルダ階層に `Settings.json` という名前で配置することで機能する。
+
+設定ファイルが存在しない場合はアプリケーションが起動しない。また、設定ファイルの構成内容に誤りがある場合もアプリケーションが起動しない。
 
 ## キー項目と値の説明
 
-- `KeysAndTokens`: Twitter Developers で作成した App から発行される Consumer API keys および Access tokens の設定。
-  - `ApiKey` {string}: コンシューマー API キー (Consumer API key)。
-  - `ApiSecretKey` {string}: コンシューマー API シークレット キー (Consumer API secret key)。
-  - `AccessToken` {string}: アクセス トークン (Access token)。
-  - `AccessTokenSecret` {string}: アクセス トークン シークレット (Access token secret)。
-- `FuhaReports`: フハ レポートの出力設定。
-  - `EncodingName` {string}: レポート ファイルの文字エンコーディング名。
-  - `DetailReportFilePath` {string}: 詳細フハ レポートのファイル パス。[文字列置換マクロ](#文字列置換マクロについて)を指定できる。
-  - `TweetReportFilePath` {string}: ツイート用フハ レポートのファイル パス。文字列置換マクロを指定できる。
-- `RankingCollection`: ランキング集計の設定。
-  - `CountPerQuery` {int}: 一度のタイムライン問い合わせで取得する最大ツイート数。ただし、数字が大きすぎるとその数までツイートが取得できるわけではない。
-  - `MaxQueryIterationCount` {int}: タイムライン問い合わせを繰り返す回数。Twitter API の仕様上、タイムライン問い合わせは15分あたり15回までという制約がある。
-  - `SearchWord` {string}: ランキング対象のツイートを抽出する検索ワード。部分一致で検索を行い、全角半角や大文字小文字などは区別する。正規表現での記述に対応。
-  - `RankingBaseId` {string}: 順位の基準となるラスボスアカウントの @ID。これより前にツイートするとフライングとなる。
+- `TwitterOperation` - Twitter での操作設定グループ。
+  - `KeysAndTokens` - Twitter Developers で作成した App から発行される Consumer API keys および Access tokens の設定グループ。
+    - `ApiKey` {string} - Twitter API キー (Consumer API key)。
+    - `ApiSecretKey` {string} - Twitter API シークレット キー (Consumer API secret key)。
+    - `AccessToken` {string} - アクセス トークン (Access token)。
+    - `AccessTokenSecret` {string} - アクセス トークン シークレット (Access token secret)。
+  - `FuhaTweetAggregation` - フハ ツイートの集計設定グループ。
+    - `CountPerQuery` {int} - 一度のタイムライン問い合わせで取得する最大ツイート数。ただし、数字が大きすぎるとその数までツイートが取得できるわけではない。
+    - `MaxQueryIterationCount` {int} - タイムライン問い合わせを繰り返す回数。Twitter API の仕様上、タイムライン問い合わせは15分あたり15回までという制約がある。
+    - `SearchWord` {string} - ランキング対象のツイートを抽出する検索ワード。部分一致で検索を行い、全角半角や大文字小文字などは区別する。正規表現での記述に対応。
+    - `RankingBaseId` {string} - 順位の基準となるラスボスアカウントの @ID。このアカウントより前にツイートするとフライングとなる。
+- `FuhaTweetStorage` - 集計したフハ ツイートの保管設定グループ。
+  - `ConnectionString` {string} - 保管先となるデータベースへの接続文字列。
+- `TextReport` - テキスト ファイルによるフハ レポートの出力設定グループ。
+  - `SaveDirecotryPath` {string} - フハ レポートの保存先フォルダーのパス。
+  - `DetailReportFilePath` {string} - 詳細フハ レポートのファイル パス。[文字列置換マクロ](#文字列置換マクロについて)を指定できる。
+  - `TweetReportFilePath` {string} - ツイート用フハ レポートのファイル パス。[文字列置換マクロ](#文字列置換マクロについて)を指定できる。
+  - `EncodingName` {string} - フハ レポートの文字エンコーディング名。
 
 ## 文字列置換マクロについて
 
-`$(マクロ名)` または `$(マクロ名:オプション)` の形式で特定の情報に置換することができる。
+`$(マクロ名)` または `$(マクロ名|オプション)` の形式で特定の情報に置換することができる。
 
 サポートしているマクロについては以下を参照。
 
 ### `$(DateTime)` マクロ
 
-現在の日時に置換する。ファイル名に使用できない文字(":" など)が含まれる場合はその文字を削除する。
+現在の日時に置換する。
 
-`$(DateTime:カスタム日時書式指定文字列)` とすることで日時の書式を指定できる。詳細は[カスタム日時書式指定文字列(外部リンク)](https://docs.microsoft.com/ja-jp/dotnet/standard/base-types/custom-date-and-time-format-strings)を参照。
+`$(DateTime|カスタム日時書式指定文字列)` とすることで日時の書式を指定できる。詳細は[カスタム日時書式指定文字列(外部リンク)](https://docs.microsoft.com/ja-jp/dotnet/standard/base-types/custom-date-and-time-format-strings)を参照。
+
+ファイル名として使用できない文字 (`:` など) は削除します。
 
 #### 例1
 
@@ -45,7 +53,7 @@
 
 ```json
 {
-  "TweetReportFilePath": "ツイート用フハレポート_$(DateTime:yyyyMMdd-HHmmss).txt"
+  "TweetReportFilePath": "ツイート用フハレポート_$(DateTime|yyyyMMdd-HHmmss).txt"
 }
 ```
 
